--- a/style-phone.css
+++ b/style-phone.css
@@ -64,7 +64,7 @@
           font-size: 1.125rem;
           /* border: 1px solid var(--secondary-color); */
           /* border-radius: 3em; */
-          padding: 1em;
+          /* padding: 1em; */
         }
       
         /* general settings ends */
