--- a/style-tablet.css
+++ b/style-tablet.css
@@ -63,7 +63,7 @@
     font-size: 1.125rem;
     /* border: 1px solid var(--secondary-color); */
     /* border-radius: 3em; */
-    padding: 1em;
+    padding: 0.8em 2.3em;
   }
 
   /* general settings ends */
@@ -145,9 +145,15 @@
     /* color: var(--secondary-color); */
     /* font-family: var(--primary-font); */
     /* font-weight: 100; */
-    font-size: 2.813rem;
-    line-height: 3.75rem;
+    /* font-size: 2.813rem; */
+    font-size: clamp(1.875rem, 5.8vw, 2.813rem);
+    /* line-height: 3.75rem; */
+    line-height: clamp(2.5rem, 8vw, 3.75rem);
     margin-bottom: 1em;
+  }
+
+  .hero-btn{
+    margin: 0 auto;
   }
 
   .hero-scroll {
